@@ -4,6 +4,9 @@ Development Progress	:
 ---------------------------
 
 2011-11-27 (SVN):
+    * hexen2, net_udp.c: Replaced explicit ioctl calls by ioctlsocket.
+
+2011-11-27 (SVN):
     * dos port: mpdosock.h, mplpc.c, net_mp.c: Prefixed all of the public
       functions by WSLIB_ which would help me with using WatTCP later on.
 
